--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ body {
     line-height: 23px;
     font-weight: 800;
     color: #fff;
+    transition: 500ms ease-in-out;
 }
 
 .page-button:hover {
